# public-api/delivery/http/api.go
@@ -27,7 +27,7 @@ func RouterAPI(app *fiber.App, PublicAPIUseCase domain.PublicAPIUseCase, Authori
 
 	log.Info(handlerPublicAPI)
 	// Public API Route
-	publicAPI.Get("/product", handlerAuthorization.TokenOauth(), handlerPublicAPI.GetAllProduct)
+	publicAPI.Get("/product", handlerPublicAPI.GetAllProduct)
 	publicAPI.Post("/checkout", handlerAuthorization.TokenOauth(), handlerPublicAPI.PostCheckout)
 	publicAPI.Get("/product/:id", handlerAuthorization.TokenOauth(), handlerPublicAPI.GetProduct)
 	publicAPI.Post("b2b/token", adaptor.HTTPHandlerFunc(handlerAuthorization.PostTokenOAuth2))
